pihole/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "pihole"
spec:
  selector:
    app: "pihole"
  ports:
    - port: 8080
      name: "http"
